BPMS API 1.1 (Kafka WIP), Camunda 8 support for Camunda user tasks